--- a/src/components/GridItemList/GridItemList.css
+++ b/src/components/GridItemList/GridItemList.css
@@ -1,5 +1,5 @@
 .grid_wrapper{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(auto-fill,minmax(340px,1fr));
     grid-gap:16px;
 }
