--- a/src/components/GridItemList/GridItemList.css
+++ b/src/components/GridItemList/GridItemList.css
@@ -2,4 +2,5 @@
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(340px,1fr));
     grid-gap:16px;
+    place-items: center;
 }
