--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    text-align: center;
     justify-content: space-between;
     width:100%;
     height: 100%;
@@ -18,14 +19,6 @@
 .header_block{
     display: flex;
     flex-direction: row;
-
-}
-.button_login{
-    display: flex;
+    column-gap:16px;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 40px;
-    user-select: none;
-    border: 1px solid #E0E0E0;
 }
