--- a/src/components/Footer/FooterBottom/FooterBottom.css
+++ b/src/components/Footer/FooterBottom/FooterBottom.css
@@ -1,7 +1,7 @@
 .footer_bottom{
     display: flex;
     flex-direction: row;
-    column-gap:128px;
+    justify-content: space-between;
     margin-top:40px;
     margin-bottom: 40px;
 }
