--- a/src/components/Header/ButtonLogin/ButtonLogin.css
+++ b/src/components/Header/ButtonLogin/ButtonLogin.css
@@ -4,7 +4,12 @@
     align-items: center;
     font-size:13px;
     color:#1D1D1D;
+    padding: 14px 20px 14px 20px;
     height: 40px;
     user-select: none;
     border: 1px solid #E0E0E0;
+}
+.button_login:hover{
+    background-color: aliceblue;
+    pointer-events: all;
 }
