--- a/src/components/Footer/FooterBottom/FooterBottom.css
+++ b/src/components/Footer/FooterBottom/FooterBottom.css
@@ -5,3 +5,17 @@
     margin-top:40px;
     margin-bottom: 40px;
 }
+@media screen and (max-width:787px) {
+    .footer_bottom{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;;
+        column-gap:20px;
+        margin-top:40px;
+        margin-bottom: 40px;
+
+    }
+}
+.footer_bottom_item{
+    margin-top:20px;
+}
