--- a/src/components/RestaurantChooseDishes/RestaurantChooseDishes.css
+++ b/src/components/RestaurantChooseDishes/RestaurantChooseDishes.css
@@ -8,6 +8,7 @@
     border: 1px solid rgba(117, 117, 117, 0.20);
     width: 100%;
     font-size: 16px;
+    user-select: none;
 }
 .restaurant_choose_dishes_wrapper{
     display: flex;
