Fix footer. Styling search input. Create data directory

--- a/src/components/Footer/FooterGrid/FooterGrid.css
+++ b/src/components/Footer/FooterGrid/FooterGrid.css
@@ -4,11 +4,13 @@
     justify-content: space-between;
     color:#fff;
     margin-bottom: 48px;
+    column-gap:100px;
 }
 .footer_grid_item{
     display: flex;
     flex-direction: column;
     row-gap:23px;
+    flex: 0 0 33.333%;
 }
 @media screen and (max-width:787px) {
     .footer_grid{
