--- a/src/components/Footer/FooterBottom/FooterBottom.css
+++ b/src/components/Footer/FooterBottom/FooterBottom.css
@@ -4,13 +4,13 @@
     justify-content: space-between;
     margin-top:40px;
     margin-bottom: 40px;
+    column-gap:100px;
 }
 @media screen and (max-width:787px) {
     .footer_bottom{
         display: flex;
         flex-direction: column;
         justify-content: center;;
-        column-gap:20px;
         margin-top:40px;
         margin-bottom: 40px;
 
@@ -18,4 +18,8 @@
 }
 .footer_bottom_item{
     margin-top:20px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex: 0 0 33.3333%;
 }
