--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -8,7 +8,6 @@
     height: 100%;
     background-color: rgba(0,0,0,0.5);
 }
-
 .modal{
     position: absolute;
     left: 50%;
@@ -19,19 +18,35 @@
     background-color: #fff;
     width: 400px;
     height: 600px;
-    padding:48px;
+    padding:20px;
 }
-
-
+@media screen and (max-width: 768px) {
+    .modal_container{
+        background-color: #fff;
+        width: 100%;
+        height: 100%;
+        padding:20px;
+    }
+    .modal{
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        height: 100%;
+        width: 100%;
+    }
+}
 .active{
     display: block;
 }
 .non_active{
     display: none;
 }
-
-
 .close_button{
-    border: 1px solid;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
     user-select: none;
+}
+.close_button svg:hover{
+    stroke: gray;
 }
