--- a/src/components/LoginModal/LoginModal.css
+++ b/src/components/LoginModal/LoginModal.css
@@ -15,7 +15,10 @@
     transform: translate(-50%, -50%);
 }
 .modal_container{
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
+    border-radius: 8px;
     width: 400px;
     height: 600px;
     padding:20px;
@@ -41,12 +44,4 @@
 .non_active{
     display: none;
 }
-.close_button{
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    user-select: none;
-}
-.close_button svg:hover{
-    stroke: gray;
-}
+
