--- a/src/components/RestaurantGridItemList/RestaurantGridItemList.css
+++ b/src/components/RestaurantGridItemList/RestaurantGridItemList.css
@@ -1,27 +1,5 @@
-.restaurant_grid_item_list{
-    margin-top:56px;
-}
-.restaurant_grid_item_wrapper{
-    display: flex;
-    flex-direction: column;
-}
-.restaurant_grid_item_header{
-    color: #1D1D1D;
-    font-size: 22px;
-    margin-bottom: 32px;
-}
-.restaurant_grid{
+.grid_wrapper{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(470px,1fr));
-    column-gap:16px;
-    row-gap: 49px;
-}
-@media screen and (max-width: 787px) {
-    .restaurant_grid{
-        display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(308px,1fr));
-        column-gap:16px;
-        row-gap: 49px;
-    }
-
+    grid-template-columns: repeat(auto-fill,minmax(318px,1fr));
+    grid-gap:16px;
 }
