--- a/src/components/LoginModal/Auth/AuthBack/AuthCloseButton/AuthCloseButton.css
+++ b/src/components/LoginModal/Auth/AuthBack/AuthCloseButton/AuthCloseButton.css
@@ -2,6 +2,7 @@
     position: relative;
     display: flex;
     justify-content: flex-end;
+    cursor: pointer;
     user-select: none;
     opacity: 0.5;
 }
