--- a/src/components/LoginModal/Auth/AuthOptions/AuthOptions.css
+++ b/src/components/LoginModal/Auth/AuthOptions/AuthOptions.css
@@ -34,3 +34,9 @@
 .image_wrapper{
     margin-left:16px;
 }
+.auth_header{
+    display: inline !important;
+    text-align: start !important;
+    white-space: nowrap !important;
+    color: #000000 !important;
+}
