If mobile dropdown change language in footer change icon. Fix ui. Add internationalization react-i18next.

--- a/src/components/Footer/FooterGrid/FooterGrid.css
+++ b/src/components/Footer/FooterGrid/FooterGrid.css
@@ -12,6 +12,10 @@
     row-gap:23px;
     flex: 0 0 33.333%;
 }
+.footer_grid_logo_item{
+    display: flex;
+    column-gap: 12px;
+}
 @media screen and (max-width:787px) {
     .footer_grid{
         display: flex;
